load("@buildifier_prebuilt//:rules.bzl", "buildifier")

config_setting(
    name = "is_amd64_linux",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "is_arm64_darwin",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:osx",
    ],
)

sh_binary(
    name = "create_release",
    srcs = ["create_release.sh"],
    data = select({
        ":is_amd64_linux": ["@git_chglog_linux_amd64//:git_chglog"],
        ":is_arm64_darwin": ["@git_chglog_darwin_arm64//:git_chglog"],
        "//conditions:default": [],
    }),
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "diff",
)
