load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "context",
    srcs = [
        "context.bzl",
    ],
    visibility = ["//emscripten:__subpackages__"],
)

bzl_library(
    name = "emscripten_toolchain",
    srcs = [
        "emscripten_toolchain.bzl",
        "providers.bzl",
    ],
    visibility = ["//emscripten:__subpackages__"],
    deps = [
        ":platforms",
        "//emscripten/private/actions:compile",
        "//emscripten/private/actions:link",
    ],
)

bzl_library(
    name = "platforms",
    srcs = [
        "platforms.bzl",
    ],
    visibility = ["//emscripten:__subpackages__"],
)

bzl_library(
    name = "providers",
    srcs = [
        "providers.bzl",
    ],
    visibility = ["//emscripten:__subpackages__"],
)

bzl_library(
    name = "setup",
    srcs = [
        "setup.bzl",
    ],
    deps = ["@io_bazel_rules_go//go:deps"],
    visibility = ["//emscripten:__subpackages__"],
)
