load("@rules_emscripten//emscripten:def.bzl", "declare_toolchains", "emscripten_sdk")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

filegroup(
    name = "emsdk",
    srcs = glob(["emsdk/**"]),
)

emscripten_sdk(
    name = "emscripten_sdk",
    emos = "{emos}",
    emarch = "{emarch}",
    emcc = "bin/emcc{exe}",
    emsdk = [":emsdk"],
    emconfig = ".emconfig",
)

go_binary(
    name = "builder",
    srcs = ["@rules_emscripten//emscripten/private/tools/builder:builder_srcs"],
)

declare_toolchains(
    host = "{emos}_{emarch}",
    sdk = ":emscripten_sdk",
    builder = ":builder",
)
