load("@com_stevenengelhardt_rules_emscripten//emscripten:def.bzl", "declare_toolchains", "emscripten_sdk")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

filegroup(
    name = "emsdk",
    srcs = glob(["emsdk/**"]),
)

emscripten_sdk(
    name = "emscripten_sdk",
    emos = "{emos}",
    emarch = "{emarch}",
    emcc = "{emcc}",
    emsdk = [":emsdk"],
    emconfig = ".emconfig",
)

go_binary(
    name = "builder",
    srcs = ["@com_stevenengelhardt_rules_emscripten//emscripten/private/tools/builder:builder_srcs"],
)

go_binary(
    name = "launcher",
    srcs = ["@com_stevenengelhardt_rules_emscripten//emscripten/private/tools/launcher:launcher_srcs"],
)

declare_toolchains(
    host = "{emos}_{emarch}",
    sdk = ":emscripten_sdk",
    builder = ":builder",
    launcher = ":launcher",
)
