load("@com_stevenengelhardt_rules_emscripten//emscripten:def.bzl", "emcc_library")
load("@aspect_rules_js//js:defs.bzl", "js_test")

emcc_library(
    name = "module",
    srcs = ["lib.cpp"],
    modularize = False,
    emit_wasm = False,
    emit_memory_init_file = False,
    extern_pre_js = "pre.js",
    extern_post_js = "post.js",
    linkopts = ["--bind"],
)

js_test(
    name = "test_module",
    data = [
        ":module",
        "//:node_modules/tape",
    ],
    entry_point = "test_module.js",
    tags = ["L0"],
)