load("@com_stevenengelhardt_rules_emscripten//emscripten:def.bzl", "emcc_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_test")

emcc_library(
    name = "module",
    srcs = ["lib.cpp"],
    emit_memory_init_file = False,
    emit_wasm = False,
    extern_post_js = "post.js",
    extern_pre_js = "pre.js",
    linkopts = ["--bind"],
    modularize = False,
)

nodejs_test(
    name = "test_module",
    data = [
        ":module",
        "@npm//tape",
    ],
    entry_point = "test_module.js",
    tags = ["L0"],
    templated_args = ["$(rootpaths :module)"],
)
