load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "compile",
    srcs = [
        "compile.bzl",
    ],
    visibility = ["//emscripten:__subpackages__"],
)

bzl_library(
    name = "link",
    srcs = [
        "link.bzl",
    ],
    visibility = ["//emscripten:__subpackages__"],
)