load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "binary",
    srcs = [
        "binary.bzl",
    ],
    visibility = ["//emscripten:__subpackages__"],
    deps = ["//emscripten/private:context"],
)

bzl_library(
    name = "library",
    srcs = [
        "library.bzl",
    ],
    visibility = ["//emscripten:__subpackages__"],
    deps = ["//emscripten/private:context"],
)

bzl_library(
    name = "sdk",
    srcs = [
        "sdk.bzl",
    ],
    visibility = ["//emscripten:__subpackages__"],
)
